syntax = "proto3";

message VerifyAccessTokenRequest{
  string accessToken = 1;
}

message VerifyAccessTokenResponse{
  string id = 1;
}

service TokenService{
  rpc verifyAccessToken(VerifyAccessTokenRequest) returns (VerifyAccessTokenResponse);
}